...
      <Tab.Screen
        name="Contacts"
        component={ContactsStack}
        options={{
          tabBarLabel: t("contacts.title"),
          tabBarAccessibilityLabel: t("contacts.title"),
          tabBarButtonTestID: "tab-contacts",
        }}
      />
      <Tab.Screen
        name="Settings"
        component={SettingsStack}
        options={{
          tabBarLabel: t("settings.title"),
          tabBarAccessibilityLabel: t("settings.title"),
          tabBarButtonTestID: "tab-settings",
        }}
      />
    </Tab.Navigator>
  );
}

